# aether

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  docker-compose.yml  docker-publish.sh  rustfmt.toml
.github/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.md   pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
frontend/: .eslintrc.json  .postcssrc  .stylelintrc.json  Dockerfile  README.md  nginx.conf  package.json  tsconfig.json
frontend/src/: Main.tsx  global.scss  index.html  index.tsx  themes.scss
frontend/src/components/auth/: Auth.tsx  style.scss
frontend/src/components/button/: Button.tsx  style.scss
frontend/src/components/greeter/: Greeter.tsx  style.scss
frontend/src/components/icon/: Icon.tsx
frontend/src/controllers/: index.ts  theme.ts  unused.ts
frontend/src/routers/: Auth.tsx
frontend/src/store/: index.ts
health/: Cargo.toml  Dockerfile  README.md
health/benches/: health.rs
health/src/: lib.rs  main.rs
health/tests/: health.rs
helm/: Chart.yaml  values.yaml
helm/templates/: ingress.yaml
helm/templates/services/: backend.yaml  frontend.yaml  health.yaml  user.yaml
shared/: Cargo.toml  README.md
shared/src/: file.rs  user.rs
src/: lib.rs  main.rs
src/routes/: error.rs  frontend.rs  health.rs  mod.rs
tests/: error.rs  frontend.rs  health.rs
user/: Cargo.toml  Dockerfile  README.md
user/benches/: health.rs
user/src/: lib.rs  main.rs
user/src/routes/: health.rs
user/tests/: health.rs
(+15 files in other folders)
